# TCO-XMLProcessing

./: PostMortem.md  README.md
solution/: .gitignore  CMakeLists.txt
solution/.build/: README.md
solution/app/: CMakeLists.txt
solution/app/src/: cli_params.hpp  dummy.cpp  error_printer.cpp  error_printer.hpp  file_io.cpp  file_io.hpp  filesystem.cpp  filesystem.hpp  jsonize.cpp  jsonize.hpp  main.cpp  parser.cpp  parser.hpp  work.cpp  work.hpp
